--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,2 +1,7 @@
 <h2>Welcome!</h2>
 <p>Use the navigation above to manage dancers, performances, practices, and locations.</p>
+
+<h3>Use the button below to reset all database tables</h3>
+<form action="/reset-tables" method="POST">
+  <button type="submit">Reset Tables</button>
+</form>
