--- a/views/dancerpractices.hbs
+++ b/views/dancerpractices.hbs
@@ -22,7 +22,10 @@
       {{/if}}
     </td>
     <td>
-        <button type="submit" class="btn-delete">Delete</button>
+         <form action="/delete-dancer-practice" method="POST" onsubmit="return confirm('Are you sure you want to delete this dancer practice?');">
+            <input type="hidden" name="dancerPracticeID" value="{{this.dancerPracticeID}}">
+            <button type="submit" class="btn-delete">Delete</button>
+        </form>
     </td>
   </tr>
   {{/each}}
@@ -32,7 +35,7 @@
 
 <h3>Add New Dancer's Practice</h3>
 
-<form id="addDancerPracticeForm" action="/add-dancerpractice" method="POST">
+<form id="addDancerPracticeForm" action="/add-dancer-practice" method="POST">
   <label for="dancerID">Select Dancer:</label>
   <select id="dancerID" name="dancerID" required>
     {{#each dancers}}
@@ -51,11 +54,17 @@
     {{/each}}
   </select>
 
+  <label for="mandatory">Mandatory?</label>
+  <select id="mandatory" name="mandatory" required>
+    <option value="1">Yes</option>
+    <option value="0">No</option>
+  </select>
+
   <button type="submit" id="addDancerPracticeBtn">Add Dancer's Practice</button>
 </form>
 
 <h3>Edit a Dancer's Practice</h3>
-<form id="editDancerPracticeForm" action="/edit-dancerpractice" method="POST">
+<form id="editDancerPracticeForm" action="/edit-dancer-practice" method="POST">
   <label for="dancerPracticeID">Select Dancer's Practice to Edit:</label>
   <select id="dancerPracticeID" name="dancerPracticeID" required>
     {{#each dancerpractices}}
@@ -66,13 +75,13 @@
   </select> 
 
   <label for="newMandatory">Mandatory?</label>
-  <select id="newMandatory" name="newMandatory">
-    <option value="true">Yes</option>
-    <option value="false">No</option>
+  <select id="newMandatory" name="newMandatory" required>
+    <option value="1">Yes</option>
+    <option value="0">No</option>
   </select>
 
   <label for="newDancer">New Dancer:</label>
-  <select id="newDancer" name="newDancer">
+  <select id="newDancer" name="newDancer" required>
     {{#each dancers}}
       <option value="{{this.dancerID}}">
         {{this.firstName}} {{this.lastName}}
@@ -81,7 +90,7 @@
   </select>
 
   <label for="newPractice">New Practice:</label>
-  <select id="newPractice" name="newPractice">
+  <select id="newPractice" name="newPractice" required>
     {{#each practices}}
       <option value="{{this.practiceID}}">
         {{this.date}} - {{this.locationName}}
