--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -13,7 +13,10 @@
     <td>{{this.name}}</td>
     <td>{{this.address}}</td>
     <td>
-        <button type="submit" class="btn-delete">Delete</button>
+         <form action="/delete-location" method="POST" onsubmit="return confirm('Are you sure you want to delete this location?');">
+            <input type="hidden" name="locationID" value="{{this.locationID}}">
+            <button type="submit" class="btn-delete">Delete</button>
+        </form>
     </td>
   </tr>
   {{/each}}
@@ -41,9 +44,9 @@
   {{/each}}
 </select>
 <label for="newName">New Name:</label>
-<input type="text" id="newName" name="newName">
+<input type="text" id="newName" name="newName" required>
 <label for="newAddress">New Address:</label>
-<input type="text" id="newAddress" name="newAddress">
+<input type="text" id="newAddress" name="newAddress" required>
 <button id="editLocationBtn">Edit Location</button>
 </form>
 </div>
