--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,16 @@
+{{!--
+  ECLIPSE Crew Management System
+  Group 79 - Jenna Rivera and Kaelee Duong
+  Home Handlebars Template for CS340 Final Project
+
+  Citations:
+  - All code was written by Group 79 members.
+ --}}
+ 
 <h2>Welcome!</h2>
 <p>Use the navigation above to manage dancers, performances, practices, and locations.</p>
 
+{{! reset tables section !}}
 <h3>Use the button below to reset all database tables</h3>
 <form action="/reset-tables" method="POST">
   <button type="submit">Reset Tables</button>
