--- a/views/performers.hbs
+++ b/views/performers.hbs
@@ -1,11 +1,33 @@
+{{!--
+  ECLIPSE Crew Management System
+  Group 79 - Jenna Rivera and Kaelee Duong
+  Performers Handlebars Template for CS340 Final Project
+
+  Citations:
+  - Handlebars.js documentation: https://handlebarsjs.com/guide/
+  - Exploration: Web Application Technology example code was used as a reference for structuring Handlebars templates.
+  - All other code was written by Group 79 members.
+ --}}
+
 <h2>Performers</h2>
 
+{{! success message upon creating a new performer !}}
 {{#if createdID}}
   <div class="success-message">
     Performer with ID {{createdID}} was successfully created!
   </div>
 {{/if}}
 
+
+{{! success message upon updating an existing performer !}}
+{{#if updatedID}}
+  <div class="success-message">
+    Performer with ID {{updatedID}} was successfully updated!
+  </div>
+{{/if}}
+
+
+{{! table displaying data from performers !}}
 <table class="styled-table">
   <tr><th>First Name</th><th>Last Name</th><th>Performance</th><th>Actions</th></tr>
   {{#each performers}}
@@ -23,6 +45,7 @@
   {{/each}}
 </table>
 
+{{! add new performer !}}
 <div class="form-section">
 <h3>Add New Performer</h3>
 
@@ -48,6 +71,7 @@
   <button type="submit" id="addPerformerBtn">Add Performer</button>
 </form>
 
+{{! edit existing performer !}}
 <h3>Edit a Performer</h3>
 <form id="editPerformerForm" action="/edit-performer" method="POST">
   <label for="performerID">Select Performer to Edit:</label>
