--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,12 @@
+/*
+ECLIPSE Crew Management System
+Group 79 - Jenna Rivera and Kaelee Duong
+Styling file for CS340 Final Project
+
+Citations:
+- All work done by Group 79
+*/
+
 body {
   font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
