--- a/views/dancers.hbs
+++ b/views/dancers.hbs
@@ -4,8 +4,11 @@
   Dancers Handlebars Template for CS340 Final Project
 
   Citations:
+  Date: 11/5/2025
   - Handlebars.js documentation: https://handlebarsjs.com/guide/
   - Exploration: Web Application Technology example code was used as a reference for structuring Handlebars templates.
+      - URL: https://canvas.oregonstate.edu/courses/2017561/pages/exploration-web-application-technology-2?module_item_id=25645131
+      
   - All other code was written by Group 79 members.
  --}}
 
