--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,3 +1,12 @@
+{{!--
+  ECLIPSE Crew Management System
+  Group 79 - Jenna Rivera and Kaelee Duong
+  Main Header Handlebars Template for CS340 Final Project
+
+  Citations:
+  - All code was written by Group 79 members.
+ --}}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
