edit citation format

--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ Group 79 - Jenna Rivera and Kaelee Duong
 Styling file for CS340 Final Project
 
 Citations:
-- All work done by Group 79
+All work done by Group 79
 */
 
 body {
