--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,7 +4,7 @@
   Home Handlebars Template for CS340 Final Project
 
   Citations:
-  - All code was written by Group 79 members.
+  All code was written by Group 79 members.
  --}}
  
 <h2>Welcome!</h2>
