--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
   Main Header Handlebars Template for CS340 Final Project
 
   Citations:
-  - All code was written by Group 79 members.
+  All code was written by Group 79 members.
  --}}
 
 <!DOCTYPE html>
