--- a/views/performers.hbs
+++ b/views/performers.hbs
@@ -3,13 +3,11 @@
   Group 79 - Jenna Rivera and Kaelee Duong
   Performers Handlebars Template for CS340 Final Project
 
-  Citations:
+  Citations: Exploration: Web Application Technology example code was used as a reference for structuring Handlebars templates.
   Date: 11/5/2025
-  - Handlebars.js documentation: https://handlebarsjs.com/guide/
-  - Exploration: Web Application Technology example code was used as a reference for structuring Handlebars templates.
-    - URL: https://canvas.oregonstate.edu/courses/2017561/pages/exploration-web-application-technology-2?module_item_id=25645131
+  Source URL: https://canvas.oregonstate.edu/courses/2017561/pages/exploration-web-application-technology-2?module_item_id=25645131
       
-  - All other code was written by Group 79 members.
+  All other code was written by Group 79 members.
  --}}
 
 <h2>Performers</h2>
